tests/test_assets/semantic/invalid/arrays/assignment_element_count.cog
// semantic error at line 4: array initializer element count does not match array size
// 1 semantic error generated.

test::() -> void {
    values: i32[2] = [0, 0];

    values = [1, 2, 3];
}