tests/test_assets/semantic/invalid/arrays/assignment_element_count.expected
semantic error at line 7: array initializer element count does not match array size
1 semantic error generated.
